Restructuring the modules and packages